--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "bun run next lint"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "typescript": "^5",
